[tool.poetry]
name = "langtools"
version = "0.1.0"
description = ""
authors = ["なるみ <toucans-cutouts0f@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.209"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
yapf = "^0.40.1"
toml = "^0.10.2"
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
